tests/ui/misuse.stderr
error[E0599]: the method `FIRST_ARG_MUST_EITHER_BE_Span_OR_IMPLEMENT_ToTokens_OR_BE_SpanRange` exists for reference `&Foo`, but its trait bounds were not satisfied
  --> $DIR/misuse.rs:8:5
   |
4  | struct Foo;
   | ---------- doesn't satisfy `Foo: quote::to_tokens::ToTokens`
...
8  |     abort!(Foo, "BOOM");
   |     ^^^^^^^^^^^^^^^^^^^ method cannot be called on `&Foo` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Foo: quote::to_tokens::ToTokens`
           which is required by `&Foo: ToTokensAsSpanRange`
note: the trait `quote::to_tokens::ToTokens` must be implemented
  --> $DIR/to_tokens.rs:10:1
   |
10 | pub trait ToTokens {
   | ^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::diagnostic` which comes from the expansion of the macro `abort` (in Nightly builds, run with -Z macro-backtrace for more info)
